[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrma"
version = "0.2.0"
description = "HTTP Trust Boundary Analyzer — replay requests, mutate headers safely, quantify response influence (authorized testing only)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Mohamed Abdelaal (0xmrma)", email = "moabdelaal442004@gmail.com" }
]

keywords = ["security", "http", "headers", "pentesting", "fuzzing", "analysis", "cli"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/0xmrma/mrma"
Repository = "https://github.com/0xmrma/mrma"
Issues = "https://github.com/0xmrma/mrma/issues"
[project.scripts]
mrma = "mrma.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrma*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
